<resources>
    <string name="app_name">Labs20231-Gr03</string>
    <string name="title_activity_personal_data">PersonalDataActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="personal_information">Información personal</string>
    <string name="name">Nombres</string>
    <string name="lastname">Apellidos</string>
    <string name="genre">Género</string>
    <string name="birthday">Fecha de nacimiento</string>
    <string name="education_level">Grado de escolaridad</string>
    <string name="male">Hombre</string>
    <string name="female">Mujer</string>
    <string name="btn_next">Siguiente</string>

    <string name="phone">Teléfono</string>
    <string name="address">Dirección</string>
    <string name="email">Correo</string>
    <string name="country">País</string>
    <string name="city">Ciudad</string>
    <string name="Next">Siguiente</string>
    <string name="state">Estado/Departamento</string>
    <string name="btn_change">Cambiar</string>
    <string name="contact_information">Información de Contacto</string>
    <string name="required">Campo Obligatorio</string>
    <string-array name="educational_options_array">
        <item>Grado escolaridad</item>
        <item>Primaria</item>
        <item>Secundaria</item>
        <item>Universitaria</item>
        <item>Otro</item>
    </string-array>
</resources>